Rebrand to CanIPlay

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Network Feasibility & Latency Analysis Tool - Test game server connectivity and ping from restricted networks">
-    <title>GamePing Checker | Network Latency Analyzer</title>
+        content="CanIPlay - Test game server connectivity and latency from restricted networks before downloading">
+    <title>CanIPlay | Game Server Ping Test</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,8 +27,8 @@
                     </svg>
                 </div>
                 <div class="logo-text">
-                    <h1>GAMEPING</h1>
-                    <span class="tagline">Network Reconnaissance System</span>
+                    <h1>CanIPlay</h1>
+                    <span class="tagline">Game Server Ping Test</span>
                 </div>
             </div>
             <div class="header-actions">
@@ -264,10 +264,9 @@
     <!-- Footer -->
     <footer class="footer">
         <p>
-            <strong>⚠ INTEL:</strong> HTTP-based latency reconnaissance. Results may vary from in-game performance due
-            to protocol differences.
+            <strong>Note:</strong> HTTP-based latency testing. Results may vary from in-game performance.
         </p>
-        <p class="copyright">GAMEPING v2.0 // NETWORK RECON SYSTEM // 2026</p>
+        <p class="copyright">CanIPlay v1.0 | 2026</p>
     </footer>
 
     <!-- Loading Overlay -->
