Fix CORB and cache issues: update logo URLs and add cache busting

--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
     </div>
 
     <!-- Scripts -->
-    <script src="js/servers.js"></script>
-    <script src="js/tester.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/servers.js?v=2"></script>
+    <script src="js/tester.js?v=2"></script>
+    <script src="js/ui.js?v=2"></script>
+    <script src="js/main.js?v=2"></script>
 </body>
 
 </html>
