--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="CanIPlay - Test game server connectivity and latency from restricted networks before downloading">
+        content="Test your connection to game servers (Valorant, CS2, Fortnite, etc.) from restricted networks. Check latency, jitter, and packet loss without installing games.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://caniplay.dpdns.org/">
     <title>CanIPlay | Game Server Ping Test</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
