Fix regression: Show region on re-render and restore fonts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://caniplay.dpdns.org/">
     <title>CanIPlay | Game Server Ping Test</title>
-    <link rel="stylesheet" href="css/styles.css?v=4">
+    <link rel="stylesheet" href="css/styles.css?v=6">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,6 +18,18 @@
 </head>
 
 <body>
+    <!-- Background Elements -->
+    <div class="bg-noise"></div>
+    <div class="bg-grid"></div>
+    <div class="bg-glow"></div>
+
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loader">
+            <div class="spinner"></div>
+            <p>Scanning network...</p>
+        </div>
+    </div>
+
     <!-- Header -->
     <header class="header">
         <div class="header-content">
